# Mona.py

./: .gitignore  README.md  channels.json  index.js  requirements.txt  starcatch_channels.json  tips.json  weapons.json
BOT/: Cargo.toml
BOT/src/: main.rs
Bot 1/: main.py  stuff.json
DB/: database.json  db_tests.py  json_db.py  main.py  tests.py
Mona.py/: bot.py
Mona.rs/: Cargo.toml  mona.js
Mona.rs/rigger/: main.lua
Mona.rs/src/: main.rs
Mona.rs/src/commands/: fun.rs
Mona_py/: bot.py  inventory.json  items.jsonc  json_db.py  json_opener.py  logger.py  utils.py  voicelines.json  weapons.json
Mona_py/Commands/: api_backend.json  ascii.py  autocrop.py  chat.py  epic_games.py  freeGamesPromotions.json  friends.py  hello.py  help.py  ms.py  reaction.py  reaction_main.py  tips.py
Mona_py/Commands/JS/: autocrop.js  friends.js  invite.js
Mona_py/Commands/JS/Starcatch/: balance.js  bossfight.js  buy.js  daily.js  equip.js  search.js  search2.js  shop.js  starcatch.js  stats.js  sub.js  use.js  xp.js
Mona_py/Commands/Reactions/: emoji.py  star.py
Mona_py/Commands/Starcatch/: balance.js  bossfight.js  leaderboard.js  mobs.js  pay.js  sell.js  use.js  xp.js
Mona_py/Commands/Types/: autorole.py  starred_messages.py
